# ioig

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
cmake/: find_pico_sdk.cmake
examples/: hc-sr04.cpp  hc-sr04_lcd.cpp  lcd_i2c.cpp
examples/arduino/: Blink.cpp  Fading.cpp  Interrupts.cpp  Light_Sensor.cpp  hc-sr04_lcd.cpp  lcd_i2c.cpp  serial_echo.cpp  serial_test.cpp
fw/: CMakeLists.txt  defines.h  device.h  main.cpp  main.h  usb_descriptors.c
fw/targets/rp2040/: hw_defs.h
fw/tasks/: analog.cpp  analog.h  gpio.cpp  gpio.h  i2c.cpp  i2c.h  serial.cpp  serial.h  spi.cpp  spi.h
fw/zephyr/applications/usb-net-adapter/: README.md  measure_rtt.py  prj.conf  sample.yaml
fw/zephyr/applications/usb-net-adapter/src/: main.c
host/: CMakeLists.txt  ioig_private.cpp  ioig_private.h  ioig_protocol.h  ioig_usb.cpp  ioig_usb.h
host/APIs/arduino/: CMakeLists.txt
host/APIs/arduino/cores/ioig/: Arduino.h  Common.cpp  Serial.cpp  Serial.h  Spi.cpp  Spi.h  Win_Compat.h  Wire.cpp  Wire.h  itoa.cpp  macros.h  wiring_analog.cpp  wiring_digital.cpp
host/APIs/native/: analog.cpp  analog.h  gpio.cpp  gpio.h  i2c.cpp  i2c.h  ioig.h  ioig_periph.h  serial.cpp  serial.h  spi.cpp  spi.h
pcb/kicad/: .gitignore
scripts/: bldflash.sh  setup_ws.sh
tests/: analog_test.cpp  gpio_test.cpp  ioig_tests.cpp  protocol_tests.cpp
tools/: gen_ws_usbdev_filter.py
